--- a/server/Vercel.json
+++ b/server/Vercel.json
@@ -1,12 +1,20 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
+        {
+            "src": "server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "dist/**"
+                ]
+            }
+        }
     ],
     "routes": [
         {
-          "src": "/(.*)",
-          "dest": "/index"
+            "src": "/(.*)",
+            "dest": "server.js"
         }
     ]
 }
